# trendsleuth

./: .gitignore  CHANGELOG.md  LICENSE  PYPI_SETUP.md  README.md  RELEASE_PROCESS.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: sample-ideas-output.md  sample-output.md  test-analysis.json  test-analysis.md
src/trendsleuth/: __init__.py  analyzer.py  brave.py  cli.py  config.py  formatter.py  ideas.py  pricing.py  reddit.py  token_tracker.py  web_evidence.py  web_scraper.py
src/trendsleuth/tests/: __init__.py
tests/: __init__.py  conftest.py  smoke_test.py  test_analyzer.py  test_brave.py  test_cli.py  test_formatter.py  test_ideas.py  test_pricing.py  test_reddit.py  test_web_evidence.py  test_web_scraper.py
