[project]
name = "trendsleuth"
version = "0.1.0"
description = "Reddit trend analysis for content creators"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Luke Maxwell", email = "luke.maxwell@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.9.0",
    "praw>=7.7.1",
    "langchain-openai>=0.2.0",
    "pydantic>=2.9.0",
]

[project.scripts]
trendsleuth = "trendsleuth.cli:app"

[project.urls]
Homepage = "https://github.com/lukemaxwell/trendsleuth"
Documentation = "https://github.com/lukemaxwell/trendsleuth/blob/main/README.md"
Repository = "https://github.com/lukemaxwell/trendsleuth.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "types-defusedxml>=0.7.0.20250822",
    "types-pexpect>=4.9.0.20260127",
    "types-psutil>=7.2.2.20260130",
    "types-pygments>=2.19.0.20251121",
    "types-pyyaml>=6.0.12.20250915",
    "types-regex>=2026.2.19.20260221",
    "types-requests>=2.32.4.20260107",
    "types-tqdm>=4.67.3.20260205",
]
